--- a/app/src/main/res/layout/fragment_episodes.xml
+++ b/app/src/main/res/layout/fragment_episodes.xml
@@ -9,6 +9,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview_episodes"
         android:layout_width="match_parent"
+        android:background="@color/gray"
         android:layout_height="wrap_content"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
